validating endpoints & cleaning  up tests
